Everything builds and runs but the vector code is much slower